[package]
name = "wrapping_in_range"
description = "Wrapping arithmetic for any range"
license = "MIT OR Apache-2.0"
keywords = ["mathematics", "numerics"]
version = "0.1.0"
edition = "2024"
authors = ["Nik Revenco <pm@nikrev.com>"]
categories = ["algorithms", "science", "no-std"]
repository = "https://github.com/nik-rev/wrapping-in-range"
rust-version = "1.60"

[dependencies]
num-traits = "0.2"

[dev-dependencies]
proptest = "1.7.0"
